in tab pafe full day added in search page car image added

--- a/assets/css/local.css
+++ b/assets/css/local.css
@@ -246,6 +246,13 @@ ul.home-footer a:hover {
 }
 .ui-tabs .ui-tabs-panel{
     background: -moz-linear-gradient(center top , #FFFFFF 20px, #D9D9D9 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8ffe8), color-stop(0%,#e3f5ab), color-stop(100%,#e8f0d6)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #f8ffe8 0%,#e3f5ab 0%,#e8f0d6 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #f8ffe8 0%,#e3f5ab 0%,#e8f0d6 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #f8ffe8 0%,#e3f5ab 0%,#e8f0d6 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #f8ffe8 0%,#e3f5ab 0%,#e8f0d6 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#e8f0d6',GradientType=0 ); /* IE6-8 */
+ 100%) repeat scroll 0 0 rgba(0, 0, 0, 0)
     
 }
 
