--- a/assets/css/local.css
+++ b/assets/css/local.css
@@ -282,3 +282,15 @@ ul.home-footer a:hover {
 .btn-success
 {margin-top:15px;
 }
+.bubbleInfo {
+    position: relative;
+}
+
+.popup {
+    position: absolute;
+    display: none; /* keeps the popup hidden if no JS available */
+}
+.testimonials
+{
+	background-color:#EDEDED;
+}
